--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,140 +1,158 @@
 .top {
-  width: 100%;
-  height: 50px;
-  background-color: #fff;
-  position: sticky;
-  top: 0;
-  display: flex;
-  align-items: center;
-  font-family: "Josefin Sans", sans-serif;
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    font-family: "Josefin Sans", sans-serif;
 }
+
 .topLeft,
 .topRight {
-  flex: 3;
-  display: flex;
-  justify-content: center;
+    flex: 3;
+    display: flex;
+    justify-content: center;
 }
+
 .topCenter {
-  flex: 6;
+    flex: 6;
 }
+
 
 /* css for social icons starts*******/
+
 .topIcon {
-  font-size: 25px;
-  margin-right: 12px;
-  color: #5fe6eb;
-  transform: 0.3s;
-  cursor: pointer;
-}
-.topIcon:hover {
-  color: aqua;
+    font-size: 25px;
+    margin-right: 12px;
+    color: #5fe6eb;
+    transform: 0.3s;
+    cursor: pointer;
 }
 
+.topIcon:hover {
+    color: aqua;
+}
+
+
 /* css for social icons ends ******/
+
 .topList {
-  justify-content: center;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: relative;
+    justify-content: center;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    color: #444;
+    list-style: none;
+    position: relative;
 }
 
 .topListItem {
-  margin-right: 25px;
-  font-weight: 500;
-  font-size: 22px;
-  cursor: pointer;
-  position: relative;
+    margin-right: 25px;
+    font-weight: 500;
+    font-size: 22px;
+    cursor: pointer;
+    position: relative;
 }
-.topListItem::after {
-  box-sizing: border-box;
-  content: "";
-  top: calc(100% + 4px);
-  transform-origin: 100% 50%;
-  transform: scale3d(0, 1, 1);
-  transition: transform 0.4s 0.1s cubic-bezier(0.2, 1, 0.8, 1);
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  background: currentColor;
-  top: 100%;
-  left: 0;
-  pointer-events: none;
-}
-.topListItem::before {
-  content: "";
-  box-sizing: border-box;
-  transform-origin: 100% 50%;
-  transform: scale3d(0, 1, 1);
-  transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
 
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  background: currentColor;
-  top: 100%;
-  left: 0;
-  pointer-events: none;
+.topListItem::after {
+    box-sizing: border-box;
+    content: "";
+    top: calc(100% + 4px);
+    transform-origin: 100% 50%;
+    transform: scale3d(0, 1, 1);
+    transition: transform 0.4s 0.1s cubic-bezier(0.2, 1, 0.8, 1);
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: currentColor;
+    top: 100%;
+    left: 0;
+    pointer-events: none;
 }
+
+.topListItem::before {
+    content: "";
+    box-sizing: border-box;
+    transform-origin: 100% 50%;
+    transform: scale3d(0, 1, 1);
+    transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: currentColor;
+    top: 100%;
+    left: 0;
+    pointer-events: none;
+}
+
 .link {
-  cursor: pointer;
-  font-size: 18px;
-  position: relative;
-  white-space: nowrap;
-  color: var(--color-text);
+    cursor: pointer;
+    font-size: 18px;
+    position: relative;
+    white-space: nowrap;
+    color: var(--color-text);
 }
 
 .link::before,
 .link::after {
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  background: currentColor;
-  top: 100%;
-  left: 0;
-  pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: currentColor;
+    top: 100%;
+    left: 0;
+    pointer-events: none;
 }
+
 .link::before {
-  content: '';
-  /* show by default */
+    content: '';
+    /* show by default */
 }
 
 .link-effect::before {
-  color: #5fe6eb;
-  transform-origin: 100% 50%;
-  transform: scale3d(0, 1, 1);
-  transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+    color: #5fe6eb;
+    transform-origin: 100% 50%;
+    transform: scale3d(0, 1, 1);
+    transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
 }
 
 .link-effect:hover::before {
-  color: #5fe6eb;
-  transform-origin: 0% 50%;
-  transform: scale3d(1, 2, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
-}
-.link-effect::after {
-  content: '';
-  color: #5fe6eb;
-  top: calc(100% + 4px);
-  transform-origin: 100% 50%;
-  transform: scale3d(0, 1, 1);
-  transition: transform 0.4s 0.1s cubic-bezier(0.2, 1, 0.8, 1);
-}
-.link-effect:hover::after {
-  color: #5fe6eb;
-  transform-origin: 0% 50%;
-  transform: scale3d(1, 1, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
+    color: #5fe6eb;
+    transform-origin: 0% 50%;
+    transform: scale3d(1, 2, 1);
+    transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
 }
 
+.link-effect::after {
+    content: '';
+    color: #5fe6eb;
+    top: calc(100% + 4px);
+    transform-origin: 100% 50%;
+    transform: scale3d(0, 1, 1);
+    transition: transform 0.4s 0.1s cubic-bezier(0.2, 1, 0.8, 1);
+}
+
+.link-effect:hover::after {
+    color: #5fe6eb;
+    transform-origin: 0% 50%;
+    transform: scale3d(1, 1, 1);
+    transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
+}
+
+
 /* search icon css starts ********/
+
 .topSearchIcon {
-  font-size: 25px;
-  color: #5fe6eb;
-  cursor: pointer;
+    font-size: 25px;
+    color: #5fe6eb;
+    cursor: pointer;
 }
-.topSearchIcon:hover{
-  color: aqua;
+
+.topSearchIcon:hover {
+    color: aqua;
 }
+
+
 /* search icon css ends ********/
