Updated Posts and post area

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,3 +1,62 @@
 .sidebar{
     flex: 3;
+    margin: 20px;
+    padding: 5px;
+    background-color:  #fbfbfb;
+    display:  flex;
+    flex-direction: column;
+    border-radius: 10px;
+    align-items:  center;
+}
+.sidebarItem{
+    display: flex;
+    align-items:  center;
+    flex-direction: column;
+}
+.sidebarTitle{
+    width: 80%;
+    margin: 10px;
+    padding: 5px;
+    border-top:  1px solid #5fe6eb;
+    border-bottom:  1px solid #5fe6eb;
+    font-family:  'Varela Round', sans-serif;
+    text-align:  center;
+    font-weight: bold;
+    line-height:  20px;
+    color:  #222;
+    font-size: 18px;
+}
+.sidebarImg{
+    width: 80%;
+    /* margin-top: 10px; */
+    height:  250px;
+    padding: 20px 30px;
+    object-fit: cover;
+}
+.sidebarList{
+    list-style: none;
+    /* text-align: center;
+    align-items: center; */
+}
+.sideNav{
+    display:  inline-block;
+    width:  50%;
+    margin: 10px  0;
+    cursor: pointer;
+    transition:  0.3s;
+}
+.sideNav:hover{
+    color:#5fe6eb;
+}
+.sidebarItem p{
+    padding: 10px 30px;
+}
+.sidebarIcon{
+    font-size:  25px;
+    color: #5fe6eb;
+    margin:  0 5px;
+    cursor: pointer;
+}
+.sidebarIcon:hover{
+    color: aqua;
 }
