--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,24 +7,24 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Lora', serif;
-    color: #444;
+    color: #5fe6eb;
 }
 
 .headerTitleSm {
     position: absolute;
-    top: 10%;
+    top: 12%;
     font-size: 20px;
 }
 
 .headerTitleLg {
     position: absolute;
-    top: 12%;
+    top: 15%;
     font-size: 100px;
 }
 
 .headerImg {
     width: 100%;
     margin-top: 50px;
-    height: 450px;
+    height: 600px;
     object-fit: cover;
 }
