--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -7,6 +7,8 @@
     display: flex;
     align-items: center;
     font-family: "Josefin Sans", sans-serif;
+    padding: 20px 0;
+    z-index: 999;
 }
 
 .topLeft,
@@ -20,21 +22,17 @@
     flex: 6;
 }
 
-
 /* css for social icons starts*******/
-
 .topIcon {
-    font-size: 25px;
+    font-size: 40px;
     margin-right: 12px;
     color: #5fe6eb;
     transform: 0.3s;
     cursor: pointer;
 }
-
 .topIcon:hover {
     color: aqua;
 }
-
 
 /* css for social icons ends ******/
 
@@ -42,7 +40,7 @@
     justify-content: center;
     display: flex;
     margin: 0;
-    padding: 0;
+    padding:  0 ;
     color: #444;
     list-style: none;
     position: relative;
@@ -51,7 +49,7 @@
 .topListItem {
     margin-right: 25px;
     font-weight: 500;
-    font-size: 22px;
+    font-size: 25px;
     cursor: pointer;
     position: relative;
 }
@@ -89,10 +87,11 @@
 
 .link {
     cursor: pointer;
-    font-size: 18px;
+    font-size: 25px;
     position: relative;
     white-space: nowrap;
     color: var(--color-text);
+    padding: 10px;
 }
 
 .link::before,
@@ -145,7 +144,7 @@
 /* search icon css starts ********/
 
 .topSearchIcon {
-    font-size: 25px;
+    font-size: 40px;
     color: #5fe6eb;
     cursor: pointer;
 }
