--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,8 +1,53 @@
 .post{
-  width: 431px;
-  margin: 16px; 
+  width: 30%;
+  padding: 14px;
 }
+/* .postWrapper{
+  padding: 0 10px;
+} */
 .postImg{
-  height: 280px;
+  height: auto;
   width: 100%;
+  object-fit: cover;
+  border-radius: 7px;
+}
+.postInfo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.postCat{
+  font-size: "Varela Round", sans-serif;
+  font-size: 15px;
+  color: #be9656;
+  line-height: 20px;
+  margin: 15px;
+  margin-top: 15px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.postTitle{
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 15px;
+  cursor: pointer;
+}
+.postDate{
+  font-family: "Lora", serif;
+  font-style: italic;
+  font-size: 13px;
+  color: #999;
+  margin-top: 15px;
+}
+.postDesc{
+  font-family: "Varela Round", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
