--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar{
-    flex: 3;
+    flex: 3; 
     margin: 20px;
     padding: 5px;
     background-color:  #fbfbfb;
@@ -27,36 +27,54 @@
     font-size: 18px;
 }
 .sidebarImg{
-    width: 80%;
+    width: 50%;
     /* margin-top: 10px; */
-    height:  250px;
+    height:  200px;
     padding: 20px 30px;
     object-fit: cover;
 }
 .sidebarList{
     list-style: none;
+    margin-bottom: 30px;
     /* text-align: center;
     align-items: center; */
 }
-.sideNav{
+.sidebarListItem{
+    display: inline-block;
+    width: 50%;
+    margin-top: 15px;
+    cursor: pointer;
+
+}
+.sidebarSocial{
+    margin-top: 15px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sidebarIcon{
+    font-size:  22px;
+    color: #5fe6eb;
+    margin-left:  10px;
+    cursor: pointer;
+}
+
+/* .sideNav{
     display:  inline-block;
     width:  50%;
     margin: 10px  0;
     cursor: pointer;
     transition:  0.3s;
-}
-.sideNav:hover{
+} */
+/* .sideNav:hover{
     color:#5fe6eb;
-}
+} */
 .sidebarItem p{
     padding: 10px 30px;
+    text-align: center;
 }
-.sidebarIcon{
-    font-size:  25px;
-    color: #5fe6eb;
-    margin:  0 5px;
-    cursor: pointer;
-}
+/* 
 .sidebarIcon:hover{
     color: aqua;
-}
+} */
