--- a/src/components/singlePost/singlePost.css
+++ b/src/components/singlePost/singlePost.css
@@ -40,3 +40,13 @@
     font-size: 18px;
     color: #b39656;
 }
+.singlePostDesc{
+    font-size: 18px;
+    line-height: 20px;
+    color: #666;
+}
+.singlePostDesc::first-letter{
+    margin-left: 20px;
+    font-size: 30px;
+    font-weight: 600;
+}
