--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -23,7 +23,7 @@
   font-size: 12px;
   cursor: pointer;
 }
-.setingsForm{
+.settingsForm{
   display: flex;
   flex-direction: column;
 }
@@ -47,5 +47,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   margin-left: 10px;
+}
+.setingForm > label{ 
+  font-size: 20px;
+  margin-top: 20px;
+}
+.settingsForm > input{
+  color: gray;
+  margin: 10px 0;
+  height: 30px;
+  border: none;
+  border-bottom: 1px solid lightgray;
+}
+.settingsSubmit{
+  width: 150px;
+  align-self: center;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  background-color: teal;
+  padding: 10px;
+  margin-top: 20px;
+  cursor: pointer;
 }
