--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,4 +1,4 @@
-.top {
+/* .top {
     width: 100%;
     height: 30px;
     background-color: #fff;
@@ -9,9 +9,9 @@
     font-family: "Josefin Sans", sans-serif;
     padding: 20px 0;
     z-index: 999;
-}
+} */
 
-.topLeft,
+/* .topLeft,
 .topRight {
     flex: 3;
     display: flex;
@@ -20,10 +20,10 @@
 
 .topCenter {
     flex: 6;
-}
+} */
 
 /* css for social icons starts*******/
-.topIcon {
+/* .topIcon {
     font-size: 40px;
     margin-right: 12px;
     color: #5fe6eb;
@@ -32,11 +32,11 @@
 }
 .topIcon:hover {
     color: aqua;
-}
+} */
 
 /* css for social icons ends ******/
 
-.topList {
+/* .topList {
     justify-content: center;
     display: flex;
     margin: 0;
@@ -52,9 +52,9 @@
     font-size: 25px;
     cursor: pointer;
     position: relative;
-}
+} */
 
-.topListItem::after {
+/* .topListItem::after {
     box-sizing: border-box;
     content: "";
     top: calc(100% + 4px);
@@ -68,8 +68,8 @@
     top: 100%;
     left: 0;
     pointer-events: none;
-}
-
+} */
+/* 
 .topListItem::before {
     content: "";
     box-sizing: border-box;
@@ -83,8 +83,8 @@
     top: 100%;
     left: 0;
     pointer-events: none;
-}
-
+} */
+/* 
 .link {
     cursor: pointer;
     font-size: 25px;
@@ -92,8 +92,8 @@
     white-space: nowrap;
     color: var(--color-text);
     padding: 10px;
-}
-
+} */
+/* 
 .link::before,
 .link::after {
     position: absolute;
@@ -103,11 +103,10 @@
     top: 100%;
     left: 0;
     pointer-events: none;
-}
+} */
 
-.link::before {
+/* .link::before {
     content: '';
-    /* show by default */
 }
 
 .link-effect::before {
@@ -115,9 +114,9 @@
     transform-origin: 100% 50%;
     transform: scale3d(0, 1, 1);
     transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
-}
+} */
 
-.link-effect:hover::before {
+/* .link-effect:hover::before {
     color: #5fe6eb;
     transform-origin: 0% 50%;
     transform: scale3d(1, 2, 1);
@@ -131,19 +130,19 @@
     transform-origin: 100% 50%;
     transform: scale3d(0, 1, 1);
     transition: transform 0.4s 0.1s cubic-bezier(0.2, 1, 0.8, 1);
-}
-
+} */
+/* 
 .link-effect:hover::after {
     color: #5fe6eb;
     transform-origin: 0% 50%;
     transform: scale3d(1, 1, 1);
     transition-timing-function: cubic-bezier(0.7, 0, 0.2, 1);
-}
+} */
 
 
 /* search icon css starts ********/
 
-.topSearchIcon {
+/* .topSearchIcon {
     font-size: 40px;
     color: #5fe6eb;
     cursor: pointer;
@@ -151,7 +150,7 @@
 
 .topSearchIcon:hover {
     color: aqua;
-}
+} */
 
 
 /* search icon css ends ********/
